# stocks-percentages

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  allocated.py  combined.py  main.py  pyproject.toml  requirements.in  requirements.txt  test_main.py  update_requirements.py
src/advisor/: allocate.py  main.py  robinhood.py
