[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks-percentages"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pre-commit",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "setuptools",
    "pyproject_hooks",
]

[tool.setuptools]
packages = ["your_package_name"]

[tool.pip-tools]
generate-hashes = true
