[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks-percentages"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pre-commit",
    "pyyaml",
    "robin_stocks"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["advisor*"]
namespaces = false
